zerocopy-derive/tests/ui/struct.stderr
error: unrecognized representation hint
  --> $DIR/struct.rs:15:8
   |
15 | #[repr("foo")]
   |        ^^^^^

error: unrecognized representation hint
  --> $DIR/struct.rs:19:8
   |
19 | #[repr(foo)]
   |        ^^^

error: unsupported representation for deriving FromBytes, AsBytes, or Unaligned on a struct
  --> $DIR/struct.rs:23:8
   |
23 | #[repr(u8)]
   |        ^^

error: unsupported representation for deriving FromBytes, AsBytes, or Unaligned on a struct
  --> $DIR/struct.rs:27:8
   |
27 | #[repr(i8)]
   |        ^^

error: unsupported representation for deriving FromBytes, AsBytes, or Unaligned on a struct
  --> $DIR/struct.rs:31:8
   |
31 | #[repr(u16)]
   |        ^^^

error: unsupported representation for deriving FromBytes, AsBytes, or Unaligned on a struct
  --> $DIR/struct.rs:35:8
   |
35 | #[repr(i16)]
   |        ^^^

error: unsupported representation for deriving FromBytes, AsBytes, or Unaligned on a struct
  --> $DIR/struct.rs:39:8
   |
39 | #[repr(u32)]
   |        ^^^

error: unsupported representation for deriving FromBytes, AsBytes, or Unaligned on a struct
  --> $DIR/struct.rs:43:8
   |
43 | #[repr(i32)]
   |        ^^^

error: unsupported representation for deriving FromBytes, AsBytes, or Unaligned on a struct
  --> $DIR/struct.rs:47:8
   |
47 | #[repr(u64)]
   |        ^^^

error: unsupported representation for deriving FromBytes, AsBytes, or Unaligned on a struct
  --> $DIR/struct.rs:51:8
   |
51 | #[repr(i64)]
   |        ^^^

error: unsupported representation for deriving FromBytes, AsBytes, or Unaligned on a struct
  --> $DIR/struct.rs:55:8
   |
55 | #[repr(usize)]
   |        ^^^^^

error: unsupported representation for deriving FromBytes, AsBytes, or Unaligned on a struct
  --> $DIR/struct.rs:59:8
   |
59 | #[repr(isize)]
   |        ^^^^^

error: conflicting representation hints
  --> $DIR/struct.rs:63:1
   |
63 | / #[repr(transparent, packed)]
64 | | struct Generic14;
   | |_________________^

error: conflicting representation hints
  --> $DIR/struct.rs:67:1
   |
67 | / #[repr(C, transparent)]
68 | | struct Generic15;
   | |_________________^

error: must have a non-align #[repr(...)] attribute in order to guarantee this type's memory layout
  --> $DIR/struct.rs:70:10
   |
70 | #[derive(FromBytes)]
   |          ^^^^^^^^^

error: unsupported on types with type parameters
  --> $DIR/struct.rs:85:10
   |
85 | #[derive(AsBytes)]
   |          ^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
  --> $DIR/struct.rs:94:1
   |
94 | / #[repr(C, align(2))]
95 | | struct Unaligned1;
   | |__________________^

error: cannot derive Unaligned with repr(align(N > 1))
   --> $DIR/struct.rs:98:1
    |
98  | / #[repr(transparent, align(2))]
99  | | struct Unaligned2 {
100 | |     foo: u8,
101 | | }
    | |_^

error: cannot derive Unaligned with repr(align(N > 1))
   --> $DIR/struct.rs:104:1
    |
104 | / #[repr(packed, align(2))]
105 | | struct Unaligned3;
    | |__________________^

error[E0565]: meta item in `repr` must be an identifier
  --> $DIR/struct.rs:15:8
   |
15 | #[repr("foo")]
   |        ^^^^^

error[E0552]: unrecognized representation hint
  --> $DIR/struct.rs:19:8
   |
19 | #[repr(foo)]
   |        ^^^

error[E0517]: attribute should be applied to enum
  --> $DIR/struct.rs:23:8
   |
23 | #[repr(u8)]
   |        ^^
24 | struct Generic3;
   | ---------------- not an enum

error[E0517]: attribute should be applied to enum
  --> $DIR/struct.rs:27:8
   |
27 | #[repr(i8)]
   |        ^^
28 | struct Generic4;
   | ---------------- not an enum

error[E0517]: attribute should be applied to enum
  --> $DIR/struct.rs:31:8
   |
31 | #[repr(u16)]
   |        ^^^
32 | struct Generic5;
   | ---------------- not an enum

error[E0517]: attribute should be applied to enum
  --> $DIR/struct.rs:35:8
   |
35 | #[repr(i16)]
   |        ^^^
36 | struct Generic6;
   | ---------------- not an enum

error[E0517]: attribute should be applied to enum
  --> $DIR/struct.rs:39:8
   |
39 | #[repr(u32)]
   |        ^^^
40 | struct Generic7;
   | ---------------- not an enum

error[E0517]: attribute should be applied to enum
  --> $DIR/struct.rs:43:8
   |
43 | #[repr(i32)]
   |        ^^^
44 | struct Generic8;
   | ---------------- not an enum

error[E0517]: attribute should be applied to enum
  --> $DIR/struct.rs:47:8
   |
47 | #[repr(u64)]
   |        ^^^
48 | struct Generic9;
   | ---------------- not an enum

error[E0517]: attribute should be applied to enum
  --> $DIR/struct.rs:51:8
   |
51 | #[repr(i64)]
   |        ^^^
52 | struct Generic10;
   | ----------------- not an enum

error[E0517]: attribute should be applied to enum
  --> $DIR/struct.rs:55:8
   |
55 | #[repr(usize)]
   |        ^^^^^
56 | struct Generic11;
   | ----------------- not an enum

error[E0517]: attribute should be applied to enum
  --> $DIR/struct.rs:59:8
   |
59 | #[repr(isize)]
   |        ^^^^^
60 | struct Generic12;
   | ----------------- not an enum

error[E0692]: transparent struct cannot have other repr hints
  --> $DIR/struct.rs:63:8
   |
63 | #[repr(transparent, packed)]
   |        ^^^^^^^^^^^  ^^^^^^

error[E0692]: transparent struct cannot have other repr hints
  --> $DIR/struct.rs:67:8
   |
67 | #[repr(C, transparent)]
   |        ^  ^^^^^^^^^^^

error[E0692]: transparent struct cannot have other repr hints
  --> $DIR/struct.rs:98:8
   |
98 | #[repr(transparent, align(2))]
   |        ^^^^^^^^^^^  ^^^^^^^^

error: aborting due to 34 previous errors

Some errors have detailed explanations: E0517, E0552, E0565, E0692.
For more information about an error, try `rustc --explain E0517`.
